# pathwise-ai

./: .dockerignore  .env.example  .gitignore  CONTRIBUTORS.md  Dockerfile.api  Makefile  PathWise_AI_Presentation.pptx  Procfile  README.md  build_orchestrator.py  build_pptx.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements-cloud.txt  requirements-local.txt  requirements.txt  run.py  setup_pathwise.py  start_enforcer.bat
.github/workflows/: ci.yml  ml-tests.yml
docs/: DEPLOYMENT.md  PathWise_AI_Implementation_Guide.md  QUICKSTART_FOR_TEAMMATES.md  TEAM_ONBOARDING.md
docs/api/: openapi.yaml
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css
infra/db/: backup.sh  init.sql
infra/mininet/: Dockerfile
infra/nginx/: nginx.conf
infra/redis/: redis.conf
scripts/: __init__.py  continuous_simulator.py  seed_ui_data.py  start_mininet_server.sh  uptime_monitor.py  validate_deployment.sh
server/: alerts.py  audit.py  auth.py  collector.py  db.py  encryption.py  ibn_engine.py  lstm_engine.py  main.py  rbac.py  reports.py  routing.py  sandbox.py  sdn_adapter.py  session_manager.py  simulator.py  state.py  traffic_shaper.py
tests/: conftest.py  smoke_all_features.py  test_batfish_loop.py  test_critical_tcs.py  test_live_server.py  test_sdd_architecture.py  test_tc11_yang_netconf.py  test_tc1_live_telemetry.py  test_tc20_vm_deploy.py  test_tc21_restart.py
(+140 files in other folders)
